--- a/src/pug/inc/goods.pug
+++ b/src/pug/inc/goods.pug
@@ -1,97 +1,53 @@
 include settings.pug
 
+-
+  var goods = [
+    {
+      caption: 'бокалы для вина',
+      count: '4 модели',
+      href: '/catalog-inner.html'
+    },
+    {
+      caption: 'бокалы для шампанского',
+      count: '4 модели',
+      href: '/catalog-inner.html'
+    },
+    {
+      caption: 'конячные бокалы',
+      count: '5 модели',
+      href: '/catalog-inner.html'
+    },
+    {
+      caption: 'для мартини',
+      count: '8 модели',
+      href: '/catalog-inner.html'
+    },
+    {
+      caption: 'рюмки для водки',
+      count: '4 модели',
+      href: '/catalog-inner.html'
+    },
+    {
+      caption: 'Вазы',
+      count: '1 модель',
+      href: '/catalog-inner.html'
+    },
+    {
+      caption: 'Категория',
+      count: '4 модели',
+      href: '/catalog-inner.html'
+    },
+  ];
+
 section.goods 
   .goods__wrap
     p.goods__descr(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Мы любим эксперементировать с разными моделями посуды, создаём новые цветоые свойства. Для этого разработали уникальную технологию, позволяющую удовлетворить потребности на любой вкус и цвет
     .goods__items 
-      a.goods__item(
-        href="/catalog-inner.html"
-        data-link="redirect"
-        data-goods="item"
-        data-sal="slide-up"
-        data-sal-duration="400"
-        data-sal-easing="ease-in-sine")
-        h3.goods__item-caption бокалы для вина
-        p.goods__item-count 4 модели
-        img.goods__item-arrow(src=`${imgPath}icons/arrow-to-top.svg` alt="arrow-icon")
-        .goods__item-img 
-          img(src=`${imgPath}goods/good-1.png` alt="good-image")
-        .goods__item-line
-      a.goods__item(
-        href="/catalog-inner.html"
-        data-link="redirect"
-        data-goods="item"
-        data-sal="slide-up"
-        data-sal-duration="400"
-        data-sal-easing="ease-in-sine") 
-        h3.goods__item-caption бокалы для шампанского
-        p.goods__item-count 4 модели
-        img.goods__item-arrow(src=`${imgPath}icons/arrow-to-top.svg` alt="arrow-icon")
-        .goods__item-img 
-          img(src=`${imgPath}goods/good-1.png` alt="good-image")
-        .goods__item-line
-      a.goods__item(
-        href="/catalog-inner.html"
-        data-link="redirect"
-        data-goods="item"
-        data-sal="slide-up"
-        data-sal-duration="400"
-        data-sal-easing="ease-in-sine") 
-        h3.goods__item-caption конячные бокалы
-        p.goods__item-count 5 модели
-        img.goods__item-arrow(src=`${imgPath}icons/arrow-to-top.svg` alt="arrow-icon")
-        .goods__item-img 
-          img(src=`${imgPath}goods/good-1.png` alt="good-image")
-        .goods__item-line
-      a.goods__item(
-        href="/catalog-inner.html"
-        data-link="redirect"
-        data-goods="item"
-        data-sal="slide-up"
-        data-sal-duration="400"
-        data-sal-easing="ease-in-sine") 
-        h3.goods__item-caption для мартини
-        p.goods__item-count 8 модели
-        img.goods__item-arrow(src=`${imgPath}icons/arrow-to-top.svg` alt="arrow-icon")
-        .goods__item-img 
-          img(src=`${imgPath}goods/good-1.png` alt="good-image")
-        .goods__item-line
-      a.goods__item(
-        href="/catalog-inner.html"
-        data-link="redirect"
-        data-goods="item"
-        data-sal="slide-up"
-        data-sal-duration="400"
-        data-sal-easing="ease-in-sine") 
-        h3.goods__item-caption рюмки для водки
-        p.goods__item-count 4 модели
-        img.goods__item-arrow(src=`${imgPath}icons/arrow-to-top.svg` alt="arrow-icon")
-        .goods__item-img 
-          img(src=`${imgPath}goods/good-1.png` alt="good-image")
-        .goods__item-line
-      a.goods__item(
-        href="/catalog-inner.html"
-        data-link="redirect"
-        data-goods="item"
-        data-sal="slide-up"
-        data-sal-duration="400"
-        data-sal-easing="ease-in-sine") 
-        h3.goods__item-caption Вазы
-        p.goods__item-count моделт
-        img.goods__item-arrow(src=`${imgPath}icons/arrow-to-top.svg` alt="arrow-icon")
-        .goods__item-img 
-          img(src=`${imgPath}goods/good-1.png` alt="good-image")
-        .goods__item-line
-      a.goods__item(
-        href="/catalog-inner.html"
-        data-link="redirect"
-        data-goods="item"
-        data-sal="slide-up"
-        data-sal-duration="400"
-        data-sal-easing="ease-in-sine") 
-        h3.goods__item-caption Категория
-        p.goods__item-count 4 модели
-        img.goods__item-arrow(src=`${imgPath}icons/arrow-to-top.svg` alt="arrow-icon")
-        .goods__item-img 
-          img(src=`${imgPath}goods/good-1.png` alt="good-image")
-        .goods__item-line
+      each good in goods
+        a.goods__item(href=good.href data-link="redirect" data-goods="item" data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
+          h3.goods__item-caption #{ good.caption }
+          p.goods__item-count #{ good.count }
+          img.goods__item-arrow(src=`${imgPath}icons/arrow-to-top.svg` alt="arrow-icon")
+          .goods__item-img 
+            img(src=`${imgPath}goods/good-1.png` alt="good-image")
+          .goods__item-line
