--- a/src/pug/inc/head.pug
+++ b/src/pug/inc/head.pug
@@ -3,6 +3,16 @@ head
   meta(charset="UTF-8")
   meta(name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover")
   meta(http-equiv="X-UA-Compatible" content="ie=edge")
+  meta(name="msapplication-TileColor" content="#ffffff")
+  meta(name="theme-color" content="#ffffff")
+  link(rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png")
+  link(rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png")
+  link(rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png")
+  link(rel="icon" type="image/png" sizes="192x192" href="/img/favicon/android-chrome-192x192.png")
+  link(rel="icon" type="image/png" sizes="512x512" href="/img/favicon/android-chrome-512x512.png")
+  link(rel="manifest" href="/img/favicon/site.webmanifest")
+  link(rel="shortcut icon" href="/img/favicon/favicon.ico" type="image/x-icon")
+  link(rel="icon" href="/img/favicon/favicon.ico" type="image/x-icon")
 
 //- meta(name="theme-color" content="#4285f4")
 //- meta(name="keywords" content="теги")
@@ -23,5 +33,3 @@ head
 //- meta(name="twitter:description" content="descr")
 //- meta(name="twitter:image" content="img url")
 //- meta(name="twitter:image:alt" content="alt for upper img")
-//- link(rel="icon" href="favicon.ico")
-//- link(rel="icon" href=" icon.svg" type="image/svg+xml")
