--- a/src/pug/parts/about-page/about-text.pug
+++ b/src/pug/parts/about-page/about-text.pug
@@ -1,10 +1,12 @@
+-
+  var aboutText = ['Мы — крупнейшее предприятие в производстве эксклюзивных декорированных стеклоизделий в России. Используем качественное сырье и тщательно следим за мировыми тенденциями в области производства посуды. Изделия изготавливаются с применением технологий, корни которых уходят в глубину веков, и новейших методик.', 'Посуда производится на высокотехнологичном и современном оборудовании. Оригинальное, дизайнерское разнообразие форм и декоров, позволяет подобрать посуду по вкусу.', 'Используется техника гравировки радужных оттенков с использованием драгоценных и полудрагоценных металлов, пантографии, кристаллайз, украшая бокалы росписью, позолотой и принтами, мы создаем потрясающие изделия, достойные украсить любой праздничный стол', 'Высочайшее качество продукции, современные технологии производства и интересные дизайнерские решения'];
+
+
 section.about-text 
   .about-text__wrap 
     .about-text__text 
-      p(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine") Мы — крупнейшее предприятие в производстве эксклюзивных декорированных стеклоизделий в России. Используем качественное сырье и тщательно следим за мировыми тенденциями в области производства посуды. Изделия изготавливаются с применением технологий, корни которых уходят в глубину веков, и новейших методик.
-      p(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine") Посуда производится на высокотехнологичном и современном оборудовании. Оригинальное, дизайнерское разнообразие форм и декоров, позволяет подобрать посуду по вкусу.
-      p(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine") Используя техники гравировки, радужного и дымчатого напыления с использованием драгоценных и полудрагоценных металлов, пантографии, кристаллайз, украшая бокалы росписью, позолотой и принтами, мы создаем потрясающие изделия, достойные украсить любой праздничный стол
-      p(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine") Высочайшее качество продукции, современные технологии производства и интересные дизайнерские решения
+      each text in aboutText
+        p(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine") #{ text }
     a.about-text__link.button(href="/catalog.html" data-link="redirect" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine")
       span смотреть продукцию
       svg(width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg")
