--- a/src/pug/parts/card-page/card-descr.pug
+++ b/src/pug/parts/card-page/card-descr.pug
@@ -1,11 +1,22 @@
+-
+  var cardDescr = [
+    {
+      key: 'Описание',
+      val: 'Бокалы из превосходного стекла украсят ваш стол и создадут незабываемую атмосферу. Яркие уникальные цвета будут красиво преломлять свет и создавать игру цвета, удовольствие от процесса станет неизбежным. Бокалы не теряют своей красочности при многократной мойке и будут долго радовать вас.',
+    },
+    {
+      key: 'Доставка и оплата',
+      val: 'Доставка в любую страну. Производится транспортными компаниями, по Москве бесплатно. Среднее время достаки по России — 2 рабочих дня',
+    },
+    {
+      key: 'Индивидуальный заказ',
+      val: 'Мы изготовим бокалы любой формы и цвета на заказ, а также можем нанести надписи и логотипы. Поможем определиться с дизайном, обсудим варианты упаковки и доставки к вам. Широкий ассортимент — более 1000 форм и 3000 уникальных цветовых решений на выбор',
+    },
+  ];
+
 section.card-descr
   .card-desrc__wrap 
-    .card-descr__item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-      .card-descr__item-key Описание
-      .card-descr__item-value Бокалы из превосходного стекла украсят ваш стол и создадут незабываемую атмосферу. Яркие уникальные цвета будут красиво преломлять свет и создавать игру цвета, удовольствие от процесса станет неизбежным. Бокалы не теряют своей красочности при многократной мойке и будут долго радовать вас.
-    .card-descr__item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-      .card-descr__item-key Доставка и оплата
-      .card-descr__item-value Доставка в любую страну. Производится транспортными компаниями, по Москве бесплатно. Среднее время достаки по России — 2 рабочих дня
-    .card-descr__item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-      .card-descr__item-key Индивидуальный заказ
-      .card-descr__item-value Мы изготовим бокалы любой формы и цвета на заказ. Поможем определиться с дизайном, обсудим варианты упаковки и доставки к вам. Широкий ассортимент — более 1000 форм и 3000 уникальных цветовых решений на выбор
+    each item in cardDescr
+      .card-descr__item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
+        .card-descr__item-key #{ item.key }
+        .card-descr__item-value #{ item.val }
