--- a/src/pug/parts/card-page/card-promo.pug
+++ b/src/pug/parts/card-page/card-promo.pug
@@ -1,76 +1,100 @@
 include ../../inc/settings.pug
 
+-
+  var cardPromoDescr = [
+    {
+      key: 'Объём',
+      val: '375 см',
+    },
+    {
+      key: 'Высота',
+      val: '26 см',
+    },
+    {
+      key: 'Кол-во в упаковке',
+      val: '6 штук',
+    },
+    {
+      key: 'Год производства',
+      val: '2023',
+    },
+    {
+      key: 'Минимальный заказ',
+      val: '1 короб',
+    },
+    {
+      key: 'Артикул',
+      val: 'EL1',
+    },
+  ];
+  var cardPromoMainImgs = [
+    `${imgPath}card-page/card-promo/card-main.png`,
+    `${imgPath}card-page/card-promo/card-main.png`,
+    `${imgPath}card-page/card-promo/card-main.png`,
+    `${imgPath}card-page/card-promo/card-main.png`,
+    `${imgPath}card-page/card-promo/card-main.png`,
+    `${imgPath}card-page/card-promo/card-main.png`,
+    `${imgPath}card-page/card-promo/card-main.png`,
+    `${imgPath}card-page/card-promo/card-main.png`,
+  ];
+  var cardPromoSlides = [
+    {
+      img:  `${imgPath}card-page/card-promo/card-slide.png`,
+      caption: 'Blue-gold',
+    },
+    {
+      img:  `${imgPath}card-page/card-promo/card-slide.png`,
+      caption: 'Chocolate',
+    },
+    {
+      img:  `${imgPath}card-page/card-promo/card-slide.png`,
+      caption: 'Purple Green',
+    },
+    {
+      img:  `${imgPath}card-page/card-promo/card-slide.png`,
+      caption: 'Silver Blue',
+    },
+        {
+      img:  `${imgPath}card-page/card-promo/card-slide.png`,
+      caption: 'Blue-gold',
+    },
+        {
+      img:  `${imgPath}card-page/card-promo/card-slide.png`,
+      caption: 'Purple Green',
+    },
+        {
+      img:  `${imgPath}card-page/card-promo/card-slide.png`,
+      caption: 'Chocolate',
+    },
+        {
+      img:  `${imgPath}card-page/card-promo/card-slide.png`,
+      caption: 'Silver Blue',
+    },
+  ];
+
 section.card-promo 
   .card-promo__wrap
     a.card-promo__back(href="#" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") 
       img(src=`${imgPath}icons/arrow-to-left.svg` alt="arrow-to-left-icon")
       span назад
     .card-promo__descr
-      .card-promo__descr-item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-        .card-promo__descr-key Объём
-        .card-promo__descr-value 375 см
-      .card-promo__descr-item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-        .card-promo__descr-key Высота
-        .card-promo__descr-value 26 см
-      .card-promo__descr-item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-        .card-promo__descr-key Кол-во в упаковке
-        .card-promo__descr-value 6 штук
-      .card-promo__descr-item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-        .card-promo__descr-key Год производства
-        .card-promo__descr-value 2023
-      .card-promo__descr-item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-        .card-promo__descr-key Минимальный заказ
-        .card-promo__descr-value 100 коробов
-      .card-promo__descr-item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-        .card-promo__descr-key Артикул
-        .card-promo__descr-value EL1
+      each item in cardPromoDescr
+        .card-promo__descr-item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
+          .card-promo__descr-key #{ item.key }
+          .card-promo__descr-value #{ item.val }
     .card-promo__heading
       p.card-promo__subtitle Бокалы для шампанского
       h1.card-promo__title Moon Space
     .card-promo__img(data-sal="zoom-in" data-sal-duration="400" data-sal-easing="ease-in-sine")
-      img(src=`${imgPath}card-page/card-promo/card-main.png` alt="card-main-photo")
+      each mainImg, index in cardPromoMainImgs
+        img(src=mainImg alt="card-main-photo" class=`${index === 0 ? 'is-active' : ''}` data-card-promo="img")
     .card-promo__slider(data-slider="card-promo" data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
       .swiper 
         .swiper-wrapper
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Blue-gold
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Chocolate
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Purple Green
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Blue-gold
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Silver Blue
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Chocolate
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Chocolate
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Chocolate
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Chocolate
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Chocolate
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Chocolate
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Chocolate
-          .swiper-slide.card-promo__slide
-            img.card-promo__slide-img(src=`${imgPath}card-page/card-promo/card-slide.png` alt="card-slide-image")
-            h3.card-promo__slide-caption Chocolate
+          each slide in cardPromoSlides
+            .swiper-slide.card-promo__slide
+              img.card-promo__slide-img(src=slide.img alt="card-slide-image")
+              h3.card-promo__slide-caption #{ slide.caption }
       .card-promo__slider-controls
         button.card-promo__slider-btn(data-slider="card-promo-prev")
           img(src=`${imgPath}icons/arrow-to-left.svg` alt="arrow-to-left-icon")
@@ -78,7 +102,7 @@ section.card-promo
         button.card-promo__slider-btn(data-slider="card-promo-next")
           img(src=`${imgPath}icons/arrow-to-right.svg` alt="arrow-to-right-icon")
       .card-promo__slider-progress-bar
-    button.card-promo__btn.button(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine")
+    button.card-promo__btn.button(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine" data-modal="open-order")
       span Заказать
       svg(width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg")
         path(d="M0.717518 15.8597L14.8597 1.71753M14.8597 1.71753H1.42462M14.8597 1.71753V15.1526" stroke="white" stroke-width="2")
