--- a/src/pug/parts/main-page/promo.pug
+++ b/src/pug/parts/main-page/promo.pug
@@ -7,23 +7,11 @@ section.promo
         span GUS-KHRUSTALNY
         span GLASS
         span FACTORY
-      p.promo__text(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Мы выпускаем посуду премиум-класса для отелей, ресторанов, баров, и друих оптовых покупателей. Титановая обработка, благодаря которой посуда приобретает уникальные, неповторимые цветовые свойства — одна из наших особенностей. Доставляем в любую точку мира
-    button.promo__btn.button(
-      data-modal="open-btn"
-      data-sal="fade"
-      data-sal-duration="400"
-      data-sal-easing="ease-in-sine")
+      p.promo__text(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Мы выпускаем посуду премиум-класса для отелей, ресторанов, баров, и друих оптовых покупателей. Титановое покрытие, благодаря которой посуда приобретает уникальные, неповторимые цветовые свойства — одна из наших особенностей. Доставляем в любую точку мира
+    button.promo__btn.button(data-modal="open-callback" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine")
       span коммерческий запрос
-      svg(
-        width="16"
-        height="17"
-        viewBox="0 0 16 17"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg")
-        path(
-          d="M0.717518 15.8597L14.8597 1.71753M14.8597 1.71753H1.42462M14.8597 1.71753V15.1526"
-          stroke="white"
-          stroke-width="2")
+      svg(width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg")
+        path(d="M0.717518 15.8597L14.8597 1.71753M14.8597 1.71753H1.42462M14.8597 1.71753V15.1526" stroke="white" stroke-width="2")
   picture.promo__bg(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine")
     source(srcset=`${imgPath}main-page/promo/promo-img-mob.png` media="(max-width: 576px)")
     img(src=`${imgPath}main-page/promo/promo-img.png` alt="promo-image")
