--- a/src/pug/catalog-inner.pug
+++ b/src/pug/catalog-inner.pug
@@ -8,12 +8,6 @@ block append variables
 block content
   .catalog-products 
     .catalog-products__wrap 
-      h1.catalog-products__title(
-        data-sal="fade"
-        data-sal-duration="400"
-        data-sal-easing="ease-in-sine") продукция
-      h1.catalog-products__subtitle(
-        data-sal="fade"
-        data-sal-duration="400"
-        data-sal-easing="ease-in-sine") Бокалы для шампанского
+      h1.catalog-products__title(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") продукция
+      h1.catalog-products__subtitle(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Бокалы для шампанского
       +catalog
