--- a/src/pug/inc/layout.pug
+++ b/src/pug/inc/layout.pug
@@ -12,7 +12,8 @@ html(lang="ru" dir="ltr")
     main.content
       block content
       include footer.pug
-    if (bodyClass !== 'card-page')
+    if (bodyClass === 'main-page')
       +modal('перезвоните мне')
     else if (bodyClass === 'card-page')
+      +modal('перезвоните мне')
       +modal('Moon Space', true)
