--- a/src/pug/parts/card-page/card-advantages.pug
+++ b/src/pug/parts/card-page/card-advantages.pug
@@ -1,14 +1,26 @@
+-
+  var cardAdvantages = [
+    {
+      header: 'Доставка по миру',
+      subheader: 'Доставляем куда угодно в кратчайшие сроки. Гарантируем сохранность товара',
+    },
+    {
+      header: 'Превосходное качество',
+      subheader: 'Превосходное качество стекла с титановы покрытием',
+    },
+    {
+      header: 'Ваши варианты',
+      subheader: 'Выбирайте любую форму, объём, цвет и мы сделаем для вас уникальный вариант',
+    },
+    {
+      header: 'Есть вопросы?',
+      subheader: 'С удовольствием проконсультируем вас по телефону или по почте',
+    },
+  ];
+
 section.card-advantages
   .card-advantages__wrap 
-    .card-advantages__item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-      .card-advantages__item-header Доставка по миру
-      .card-advantages__item-subheader Доставим куда угодно в кратчайшие сроки гарантируем сохранность товара
-    .card-advantages__item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-      .card-advantages__item-header Превосходное качество
-      .card-advantages__item-subheader Гарантируем превосходное качество стекла и титановой обработки
-    .card-advantages__item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-      .card-advantages__item-header Ваши варианты
-      .card-advantages__item-subheader Выбирайте любую форму, объём и цвет сделаем для вас уникальный вариант
-    .card-advantages__item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
-      .card-advantages__item-header Есть вопросы?
-      .card-advantages__item-subheader С удовольствием проконсультируем вас по телефону или по почте
+    each item in cardAdvantages
+      .card-advantages__item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
+        .card-advantages__item-header #{ item.header }
+        .card-advantages__item-subheader #{ item.subheader }
