--- a/src/scss/base/loader.scss
+++ b/src/scss/base/loader.scss
@@ -2,10 +2,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #000;
   z-index: 100;
+  .scroll-enabled & {
+    width: 100vw;
+    height: 100vh;
+  }
   &__wrap {
     overflow: hidden;
     padding: toRem(70) toRem(60);
@@ -14,7 +18,12 @@
     justify-content: space-between;
     height: 100%;
     @include to(1200px) {
-      padding: 40px 20px;
+      padding: 30px 20px;
+    }
+    .scroll-enabled & {
+      @include to(1200px) {
+        padding: 70px 20px;
+      }
     }
   }
   &__title {
